chore:added first name and last name to the operaors dtos

--- a/.env.example
+++ b/.env.example
@@ -13,8 +13,10 @@ NODE_ENV ='development'
 REFRESH_JWT_SECRET=jwt-secret//g/
 REFRESH_JWT_EXPIRE=1d
 JWT_COOKIE_EXPIRE=1yr
-SUPER_EMAIL =admin.gmail.com
+SUPER_EMAIL = admin.gmail.com
 SUPER_PASSWORD=sdgfssgdg
+SUPER_FIRST_NAME=super,
+SUPER_LAST_NAME= admin,
 REDIS_HOST=
 REDIS_PORT=
 REDIS_URL=
