fix:database and seeders connection

--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js  -d ./src/database/ormconfig.ts",
-    "migration:run": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run -d ./src/database/providers/database.provider.ts",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js  -d ./src/database/providers/database.provider.module.ts",
+    "migration:run": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js migration:run -d ./src/database/providers/database.provider.module.ts",
     "seed": "ts-node -r tsconfig-paths/register ./src/database/seed.ts"
   },
   "dependencies": {
@@ -42,10 +42,11 @@
     "bcryptjs": "^2.4.3",
     "bull": "^4.16.3",
     "bullmq": "^5.18.0",
-    "cache-manager": "^6.1.0",
-    "cache-manager-redis-store": "^3.0.1",
+    "cache-manager": "^3.6.0",
+    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.4.5",
     "install": "^0.13.0",
     "mysql2": "^3.11.3",
     "nanoid": "^5.0.7",
