--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20",
     "typeorm-naming-strategies": "^4.1.0",
-    "winston": "^3.15.0"
+    "winston": "^3.15.0",
+    "express-session": "^1.17.3",
+    "passport": "^0.6.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
